fix(timeline): incorrect line alignment

--- a/style/timeline.scss
+++ b/style/timeline.scss
@@ -182,8 +182,10 @@ $timeline: map.merge(
     position: absolute;
     top: 0;
     bottom: 0;
-    left: calc($line-width * -0.5);
+    left: 0;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 0;
     padding-top: calc($pointer-size + get-css-var('timeline-line-inset'));
     padding-bottom: get-css-var('timeline-line-inset');
@@ -197,8 +199,9 @@ $timeline: map.merge(
   }
 
   &--horizontal &__line {
-    inset: calc($line-width * -0.5) 0 auto;
-    width: auto;
+    bottom: auto;
+    flex-direction: row;
+    width: 100%;
     height: 0;
     padding: 0;
     padding-right: get-css-var('timeline-line-inset');
@@ -213,29 +216,29 @@ $timeline: map.merge(
   }
 
   &--flip &__line {
-    left: calc($line-width * -0.5 + 100%);
+    left: 100%;
   }
 
   &--horizontal#{&}--flip &__line {
-    top: calc($line-width * -0.5 + 100%);
+    top: 100%;
     left: 0;
   }
 
   &--alternate:not(&--flip) &__item:nth-child(even) &__line {
-    left: calc($line-width * -0.5 + 100%);
+    left: 100%;
   }
 
   &--alternate#{&}--flip &__item:nth-child(even) &__line {
-    left: calc($line-width * -0.5);
+    left: 0;
   }
 
   &--horizontal#{&}--alternate:not(&--flip) &__item:nth-child(even) &__line {
-    top: calc($line-width * -0.5 + 100%);
+    top: 100%;
     left: 0;
   }
 
   &--horizontal#{&}--alternate#{&}--flip &__item:nth-child(even) &__line {
-    top: calc($line-width * -0.5);
+    top: 0;
     left: 0;
   }
 
